# bakery-predictor

./: .gitignore  TODO.md  pyproject.toml  spec.md
.claude/: CLAUDE.md
docs/: basket_composition_result.md  closing_discount_true_demand_result.md  conformal_residual_diagnosis_result.md  data_request.md  data_request_kickoff_20260714.md  discount_business_impact.md  distributional_boosting_poc_result.md  external_data_sources.md  g2_stockout_timing_revalidation.md  holiday_premium_decomposition.md  holiday_prior_scan_result.md  hypothesis_evidence_kickoff_20260714.md  kinetic_layer_fit_analysis.md  modeling_v4.md  multistore_stockout_redefine_impactmap.md  order_conformal_calibration_result.md  phaseB_order_optimization_result.md  poc_framework_pivot.md  poc_report_v1.md  poc_report_v2.md  poc_report_v3.md  poc_scope_v6.md  poc_scope_v7.md  regime_shift_alpha_result.md  retro_harness_result.md  stockout_classifier_retrain_result.md  stockout_redefine_result.md  store_manager_interview_guide.md  target_unification_remeasure_result.md  three_way_baseline_comparison_20260715.md  three_way_baseline_comparison_20260716.md  track3_seasonal_result.md  track4_weather_result.md  trend_recalib_result.md  v4_consolidated_report.md  v4_vs_naive_and_data_needs.md  w0_demand_absorption_result.md  weekday_bias_lever_result.md
scripts/: absorption_4stores.py  all4_stores_backtest.py  all4_unified_features.py  alpha_sensitivity.py  anomaly_by_year.py  anomaly_customer_lists.py  anomaly_detect_model_residuals.py  auto_feature_selection.py  backtest_normal_target.py  build_dashboard.py  (+70 more)
(+219 files in other folders)
